# claude-wcag-accessibility-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-es.md  README.md  RESOURCES.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
data/: aria-patterns.csv  cognitive-accessibility.csv  color-palette-rules.csv  disability-models.csv  glossary-es.csv  handoff-checklist.csv  kpis.csv  legal-framework.csv  resources.csv  screen-reader-keys.csv  semantic-html.csv  testing-tools.csv  typography-rules.csv  wcag-criteria.csv  wcag3-draft.csv
evals/: evals.json
examples/components/: README.md  carousel.html  combobox.html  data-grid.html  date-picker.html  media-player.html  tabs.html  toast-notifications.html  tree-view.html
prompts/: audit-component.md  design-tokens-audit.md  generate-alt-text.md  generate-aria-pattern.md  generate-vpat-entry.md  inclusive-ux-writing.md  mobile-a11y-checklist.md  remediate-legacy-code.md  review-figma-handoff.md  sc-to-acceptance-criteria.md  summarize-audit-findings.md  test-with-screen-reader.md
scripts/: generate-resources-md.py  mcp-server.py  search.py
templates/: .lighthouserc.json  .pa11yci.json  a11y-ci.yml  audit-report.md  vpat-2.5-template.md
tests/: test_search.py
