[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wcag-accessibility-skill"
version = "2.2.0"
description = "CLI tool and database for WCAG accessibility queries"
authors = [
    { name = "mrKanoh" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wcag-search = "scripts.search:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
